--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="Monitor">
-         <SwitchPreference
+         <com.nightscout.android.utils.CustomSwitchPreference
 	            android:title="mmol/l"
 	            android:key="mmolxl"
 	            android:disableDependentsState="false"
@@ -9,7 +9,7 @@
 	            android:switchTextOff="mg/dl"
 	            android:summaryOn="mmol/l. Values are shown and setted in mmol/l"
 	            android:summaryOff="mg/dl. Values are shown and setted in mg/dl">
-	    </SwitchPreference>
+	    </com.nightscout.android.utils.CustomSwitchPreference>
         <ListPreference
         android:key="monitor_type"
         android:disableDependentsState="false"
@@ -78,12 +78,12 @@
         />
     </PreferenceCategory>
     <PreferenceCategory android:title="Sharing">    
-    <SwitchPreference
+    <com.nightscout.android.utils.CustomSwitchPreference
             android:title="API Upload (REST)"
             android:key="EnableRESTUpload"
             android:disableDependentsState="false"
             android:summary="The REST API is an alternative to direct mongodb upload">
-    </SwitchPreference>
+    </com.nightscout.android.utils.CustomSwitchPreference>
     <EditTextPreference
             android:dependency="EnableRESTUpload"
             android:title="API Base URL"
@@ -92,12 +92,12 @@
             android:defaultValue="http://{YOUR-API-SERVER}/api"
             android:dialogMessage="This only the base URL, the uploader will automatically append /entries for the POST of CGM data and /gdentries for the POST of glucometer data values">
     </EditTextPreference>
-    <SwitchPreference
+    <com.nightscout.android.utils.CustomSwitchPreference
             android:title="MongoDB Upload"
             android:key="EnableMongoUpload"
             android:disableDependentsState="false"
             android:summary="If you're using MongoLab and Azure this should be enabled">
-    </SwitchPreference>
+    </com.nightscout.android.utils.CustomSwitchPreference>
     <EditTextPreference
             android:dependency="EnableMongoUpload"
             android:title="MongoDB URI"
@@ -120,7 +120,7 @@
             android:dialogTitle="Enter Collection Name"
             android:dialogMessage="This is the name of the collection where the glucometer data will be stored">
     </EditTextPreference>
-    <SwitchPreference
+    <com.nightscout.android.utils.CustomSwitchPreference
             android:title="Wifi Hack"
             android:key="EnableWifiHack"
             android:disableDependentsState="false"
@@ -128,8 +128,8 @@
             android:summaryOn="Wifi will be disabled if there is a timeout (poor wifi signal/access point), this will allow mobile data to be used instead"
             android:summaryOff="The uploader won't try to disable Wifi even if there is a timeout"
             >
-    </SwitchPreference>
-    <SwitchPreference
+    </com.nightscout.android.utils.CustomSwitchPreference>
+    <com.nightscout.android.utils.CustomSwitchPreference
             android:title="2 Days at Startup"
             android:key="InitialTwoDayUpload"
             android:disableDependentsState="false"
@@ -137,10 +137,10 @@
             android:summaryOn="When the upload application first starts it will upload ~2.5 days of data"
             android:summaryOff="The uploader won't try upload old data"
             >
-    </SwitchPreference>
+    </com.nightscout.android.utils.CustomSwitchPreference>
     </PreferenceCategory>
      <PreferenceCategory android:title="Disclaimer">
-	    <SwitchPreference
+	    <com.nightscout.android.utils.CustomSwitchPreference
 	            android:title="I UNDERSTAND"
 	            android:key="IUNDERSTAND"
 	            android:disableDependentsState="false"
@@ -148,8 +148,11 @@
 	            android:switchTextOff="NO"
 	            android:summaryOn="Activated. Nightscout should not be used to make medical decisions. There is no support or any warranty of any kind. The quality and performance of the project is with you. This is a project that was created and is supported completely by volunteers"
 	            android:summaryOff="Deactivated. Nightscout should not be used to make medical decisions. There is no support or any warranty of any kind. The quality and performance of the project is with you. This is a project that was created and is supported completely by volunteers">
-	    </SwitchPreference>
-    </PreferenceCategory>
+	    </com.nightscout.android.utils.CustomSwitchPreference>
+	      <Preference 
+		 android:key="version"
+		 android:title="@string/version" />
+   		 </PreferenceCategory>
     <PreferenceCategory android:title="Debug">
     <ListPreference
         android:key="logLevel"
@@ -158,7 +161,7 @@
         android:summary="Select item from array"
         android:entries="@array/levelList"
         android:entryValues="@array/calib_types_values"
-        android:defaultValue="1"
+        android:defaultValue="3"
         />
      </PreferenceCategory>
 </PreferenceScreen>
