--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -88,72 +88,15 @@
         />
     </PreferenceCategory>
     <PreferenceCategory android:title="Sharing">    
-    <com.nightscout.android.utils.CustomSwitchPreference
-            android:title="API Upload (REST)"
-            android:key="EnableRESTUpload"
-            android:disableDependentsState="false"
-            android:summary="The REST API is an alternative to direct mongodb upload">
-    </com.nightscout.android.utils.CustomSwitchPreference>
+
     <EditTextPreference
-            android:dependency="EnableRESTUpload"
             android:title="API Base URL"
             android:key="API Base URL"
             android:dialogTitle="Enter Base API URL"
-            android:defaultValue="http://{YOUR-API-SERVER}/api"
+            android:defaultValue="http://{YOUR-API-SERVER}/api/v1/"
             android:dialogMessage="This only the base URL, the uploader will automatically append /entries for the POST of CGM data and /gdentries for the POST of glucometer data values">
     </EditTextPreference>
-    <com.nightscout.android.utils.CustomSwitchPreference
-            android:title="MongoDB Upload"
-            android:key="EnableMongoUpload"
-            android:disableDependentsState="false"
-            android:summary="If you're using MongoLab and Azure this should be enabled">
-    </com.nightscout.android.utils.CustomSwitchPreference>
-    <com.nightscout.android.utils.CustomSwitchPreference
-            android:title="MongoDB REST Upload"
-            android:key="isMongoRest"
-            android:disableDependentsState="false"
-            android:switchTextOn="YES"
-            android:switchTextOff="NO"
-            android:summaryOn="Activated. USING MONGO REST API.Mogo Driver is disabled. Mongodb 3.0"
-            android:summaryOff="Deactivated. USING MONGO DRIVER.Mogo Rest is disabled. Mongodb 2.6 and older">
-    </com.nightscout.android.utils.CustomSwitchPreference>
-    <EditTextPreference
-            android:dependency="EnableMongoUpload"
-            android:title="MongoDB URI"
-            android:key="MongoDB URI"
-            android:dialogTitle="Enter MongoDB URI"
-            android:dialogMessage="Replace example values in {}'s with your correct values"
-            android:defaultValue="mongodb://{user}:{password}@{host}.mongolab.com:{11111}/{database}">
-    </EditTextPreference>
-    <EditTextPreference
-            android:dependency="EnableMongoUpload"
-            android:title="APIKEY"
-            android:key="apiKey"
-            android:dialogTitle="Enter API Key"
-            android:dialogMessage="get your API KEY from mongolabs"
-            android:defaultValue="">
-    </EditTextPreference>
-     <EditTextPreference
-            android:title="Database Name"
-            android:key="dbName"
-            android:dialogTitle="Enter Database Name"
-            android:dialogMessage="set your Database Name"
-            android:defaultValue="">
-    </EditTextPreference>
-    <EditTextPreference
-            android:dependency="EnableMongoUpload"
-            android:title="Collection Name"
-            android:key="Collection Name"
-            android:dialogTitle="Enter Collection Name"
-            android:dialogMessage="This is the name of the collection where the CGM data will be stored">
-    </EditTextPreference>
-    <EditTextPreference
-            android:dependency="EnableMongoUpload"
-            android:title="Glucometer Data Collection Name"
-            android:key="gcdCollectionName"
-            android:dialogTitle="Enter Collection Name"
-            android:dialogMessage="This is the name of the collection where the glucometer data will be stored">
-    </EditTextPreference>
+
     <com.nightscout.android.utils.CustomSwitchPreference
             android:title="Wifi Hack"
             android:key="EnableWifiHack"
