--- a/res/layout/adb.xml
+++ b/res/layout/adb.xml
@@ -16,10 +16,19 @@
  
         android:text="@string/hello" />
 
+    <TextView
+        android:id="@+id/sensorValue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="50px"
+
+        android:gravity="center" />
+
     <ScrollView
         android:id="@+id/demoScroller"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
+
 
         <TextView
             android:id="@+id/demoText"
