--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,6 +6,11 @@
             android:title="Preferences">
     </item>
 
+     <item
+            android:id="@+id/calibMan"
+            android:orderInCategory="100"
+            android:title="Manual Calibration.">
+    </item>
     <item
             android:id="@+id/instantCalib"
             android:orderInCategory="100"
