background colour changes

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -60,7 +60,7 @@
             android:title="API Base URL"
             android:key="API Base URL"
             android:dialogTitle="Enter Base API URL"
-            android:defaultValue="http://{YOUR-API-SERVER}/api/v1/"
+            android:defaultValue="http://password@{YOUR-API-SERVER}/api/v1/"
             android:dialogMessage="This only the base URL, the uploader will automatically append /entries for the POST of CGM data and /gdentries for the POST of glucometer data values">
     </EditTextPreference>
 
