--- a/app/src/main/res/layout/adb.xml
+++ b/app/src/main/res/layout/adb.xml
@@ -9,6 +9,7 @@
         android:id="@+id/demoTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:textSize="50px"
         android:gravity="center"
 		android:textStyle="bold"
@@ -33,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="40px"
-			
+
  			android:gravity="center" />
     </ScrollView>
       <LinearLayout android:id="@+id/container"
