fix some lint/analyzer bugs

--- a/app/src/main/res/layout/adb.xml
+++ b/app/src/main/res/layout/adb.xml
@@ -32,7 +32,7 @@
         <TextView
             android:id="@+id/demoText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:textSize="40px"
 
  			android:gravity="center" />
